Main mobile currency styling

--- a/source/index.html
+++ b/source/index.html
@@ -137,9 +137,9 @@
       </div>
       <div class="currency">
         <div class="currency__about">
-          <img src="#" alt="Логотип Pfizer">
-          <span>Pfizer</span>
-          <span>$50.42</span>
+          <img class="currency__img" src="img/pfizer.svg" width="40" height="24" alt="Логотип Pfizer"></img>
+          <span class="currency__name">Pfizer</span>
+          <span class="currency__percent">$50.42</span>
         </div>
         <div class="currency__dynamic">
           <span>1.51%</span>
@@ -148,9 +148,9 @@
 
       <div class="currency">
         <div class="currency__about">
-          <img src="#" alt="Логотип AstraZeneca">
-          <span>AstraZeneca</span>
-          <span>$59.35</span>
+          <img class="currency__img" src="img/astraZeneca.svg" width="94" height="24" alt="Логотип AstraZeneca"></img>
+          <span class="currency__name">AstraZeneca</span>
+          <span class="currency__percent">$59.35</span>
         </div>
         <div class="currency__dynamic">
           <span>1.02%</span>
@@ -159,9 +159,9 @@
 
       <div class="currency">
         <div class="currency__about">
-          <img src="#" alt="Логотип Moderna">
-          <span>Moderna</span>
-          <span>$401.86</span>
+          <img class="currency__img" src="img/moderna.svg" width="74" height="17" alt="Логотип Moderna"></img>
+          <span class="currency__name">Moderna</span>
+          <span class="currency__percent">$401.86</span>
         </div>
         <div class="currency__dynamic">
           <span>32.17%</span>
@@ -170,19 +170,17 @@
 
       <div class="currency">
         <div class="currency__about">
-          <img src="#" alt="Логотип Johnson & Johnson">
-          <span>Johnson & Johnson</span>
-          <span>$179.47</span>
+          <img class="currency__img" src="img/johnson&johnson.svg" width="120" height="24" alt="Логотип Johnson & Johnson"></img>
+          <span class="currency__name">Johnson & Johnson</span>
+          <span class="currency__percent">$179.47</span>
         </div>
-        <div class="currency__dynamic">
+        <div class="currency__dynamic currency__dynamic--red">
           <span>0.01%</span>
         </div>
       </div>
 
-      <div class="currency">
-        <div class="currency__graph">
-          graph
-        </div>
+      <div class="currency__graph">
+        <img src="img/graph.png" width="312" height="344" alt="График с курсом акций"></img>
       </div>
     </section>
 
