Main mobile to-do styling

--- a/source/index.html
+++ b/source/index.html
@@ -185,28 +185,30 @@
     </section>
 
     <section class="main-section">
-      <h2 class="heading2">Получение прибыли от фарминдустрии</h2>
+      <div class="main-section__heading-wrapper main-section__heading-wrapper--bcg-to-do">
+        <h2 class="main-section__heading">Получение прибыли от фарминдустрии</h2>
+      </div>
       <div class="to-do">
-        <img src="#" alt="Иконка авторизируйтесь">
-        <h3>Авторизуйтесь</h3>
+        <img src="img/authorize.svg" width="80" height="80" alt="Иконка авторизируйтесь">
+        <h3 class="to-do__title">Авторизуйтесь</h3>
         <p>Оставьте контактные данные в регистрационной форме на сайте.</p>
       </div>
 
       <div class="to-do">
-        <img src="#" alt="Иконка сообщения">
-        <h3>Ответьте на звонок аналитика</h3>
+        <img src="img/message.svg" alt="Иконка сообщения">
+        <h3  class="to-do__title">Ответьте на звонок аналитика</h3>
         <p>Вас проконсультируют по работе с нашей системой</p>
       </div>
 
       <div class="to-do">
-        <img src="#" alt="Иконка исходящий поток">
-        <h3>Действуйте, как инвестор</h3>
+        <img src="img/flowOut.svg" alt="Иконка исходящий поток">
+        <h3  class="to-do__title">Действуйте, как инвестор</h3>
         <p>Внесите депозит и преумножайте дивиденды</p>
       </div>
 
       <div class="to-do">
-        <img src="#" alt="Иконка входящий поток">
-        <h3>Получайте прибыль</h3>
+        <img src="img/flowIn.svg" alt="Иконка входящий поток">
+        <h3  class="to-do__title">Получайте прибыль</h3>
         <p>Имейте стабильный доход и реинвестируйте в акции</p>
       </div>
     </section>
