Mobile menu styling

--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
         <li class="main-nav__item"><a href="#">Преимущества</a></li>
       </ul>
 
-      <a class="button button--open-navigation-posotion main-nav__button" href="#">Начать зарабатывать
+      <a class="button main-nav__button" href="#">Начать зарабатывать
         <!--main-nav__button - скрывает при закрытом меню на мобилке кнопку-->
         <img src="img/iconArrowButton.svg" width="20" height="20" alt="Стрелочка вправо">
       </a>
