Adaptive bottom-form

--- a/source/index.html
+++ b/source/index.html
@@ -265,20 +265,21 @@
     </section>
 
     <form class="form form--bottom">
-      <h2 class="form__heading form__heading--center">Используйте передовые технологии
-        для анализа рынка и уже сегодня
-        узнайте что выгодно будет продать завтра</h2>
+      <h2 class="form__heading form__heading--center">Используйте передовые технологии для анализа рынка и зарабатывайте уже сегодня на том,
+        что будет популярно завтра</h2>
 
-      <label class="visually-hidden" for="name1">Введите имя ифамилию</label>
-      <input type="text" id="name1" name="name" placeholder="Имя Фамилия">
+        <div class="form__wrapper">
+          <label class="visually-hidden" for="name1">Введите имя и фамилию</label>
+          <input type="text" id="name1" name="name" placeholder="Имя Фамилия">
 
-      <label class="visually-hidden" for="tel1">Введите телефон</label>
-      <input type="tel" id="tel1" name="tel" placeholder="Телефон">
+          <label class="visually-hidden" for="tel1">Введите телефон</label>
+          <input type="tel" id="tel1" name="tel" placeholder="Телефон">
 
-      <label class="visually-hidden" for="email1">Введите email</label>
-      <input type="email" id="email1" name="email1" placeholder="Почта">
+          <label class="visually-hidden" for="email1">Введите email</label>
+          <input type="email" id="email1" name="email1" placeholder="Почта">
+        </div>
 
-      <button class="button button--open-navigation-posotion main-nav__button" type="submit">Начать зарабатывать
+      <button class="button button--open-navigation-posotion button--desktop-w303-center main-nav__button" type="submit">Начать зарабатывать
         <img src="img/iconArrowButton.svg" width="20" height="20" alt="Стрелочка вправо">
       </button>
     </form>
