--- a/source/index.html
+++ b/source/index.html
@@ -196,7 +196,7 @@
       </div>
 
       <div class="currency__graph">
-        <img src="img/graph.svg" width="328" height="360" alt="График с курсом акций"></img>
+        <img src="img/graph.png" width="328" height="360" alt="График с курсом акций"></img>
       </div>
     </section>
 
