Button A hover active styling

--- a/source/index.html
+++ b/source/index.html
@@ -29,9 +29,10 @@
         <li class="main-nav__item"><a href="#">Преимущества</a></li>
       </ul>
 
-      <a class="button main-nav__button" href="#">Начать зарабатывать
+      <a class="button button--main-nav main-nav__button" href="#">Начать зарабатывать
         <!--main-nav__button - скрывает при закрытом меню на мобилке кнопку-->
-        <img src="img/iconArrowButton.svg" width="20" height="20" alt="Стрелочка вправо">
+        <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.93 2.93a9.998 9.998 0 0 1 14.141 0 9.998 9.998 0 0 1 0 14.14 9.998 9.998 0 0 1-14.141 0 9.998 9.998 0 0 1 0-14.14ZM6.2 7.846l4.217-.088-5.206 5.206c-.38.38-.38.99 0 1.369l.456.456c.38.379.99.379 1.368 0l5.206-5.206-.088 4.216a.969.969 0 0 0 .966.99l.625-.003c.536 0 .97-.434.966-.967l.003-7.563a.964.964 0 0 0-.966-.967l-7.57-.003a.964.964 0 0 0-.966.967l-.003.624c.003.545.45.98.992.97Z" fill="#333"/>
+        </svg>
       </a>
 
       <button class="main-nav__toggle" type="button">
@@ -65,7 +66,8 @@
 
         <button class="button button--open-navigation-posotion button--desktop-w275 main-nav__button"
           type="submit">Начать зарабатывать
-          <img src="img/iconArrowButton.svg" width="20" height="20" alt="Стрелочка вправо">
+          <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.93 2.93a9.998 9.998 0 0 1 14.141 0 9.998 9.998 0 0 1 0 14.14 9.998 9.998 0 0 1-14.141 0 9.998 9.998 0 0 1 0-14.14ZM6.2 7.846l4.217-.088-5.206 5.206c-.38.38-.38.99 0 1.369l.456.456c.38.379.99.379 1.368 0l5.206-5.206-.088 4.216a.969.969 0 0 0 .966.99l.625-.003c.536 0 .97-.434.966-.967l.003-7.563a.964.964 0 0 0-.966-.967l-7.57-.003a.964.964 0 0 0-.966.967l-.003.624c.003.545.45.98.992.97Z" fill="#333"/>
+          </svg>
         </button>
       </form>
 
@@ -300,7 +302,8 @@
 
       <button class="button button--open-navigation-posotion button--desktop-w303-center main-nav__button"
         type="submit">Начать зарабатывать
-        <img src="img/iconArrowButton.svg" width="20" height="20" alt="Стрелочка вправо">
+        <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.93 2.93a9.998 9.998 0 0 1 14.141 0 9.998 9.998 0 0 1 0 14.14 9.998 9.998 0 0 1-14.141 0 9.998 9.998 0 0 1 0-14.14ZM6.2 7.846l4.217-.088-5.206 5.206c-.38.38-.38.99 0 1.369l.456.456c.38.379.99.379 1.368 0l5.206-5.206-.088 4.216a.969.969 0 0 0 .966.99l.625-.003c.536 0 .97-.434.966-.967l.003-7.563a.964.964 0 0 0-.966-.967l-7.57-.003a.964.964 0 0 0-.966.967l-.003.624c.003.545.45.98.992.97Z" fill="#333"/>
+        </svg>
       </button>
     </form>
   </main>
