Terms and policy pages add

--- a/source/index.html
+++ b/source/index.html
@@ -321,8 +321,8 @@
     <section class="terms-and-policy">
       <h3 class="terms-and-policy__title visually-hidden">Политика и условия</h3>
       <ul class="terms-and-policy__list">
-        <li class="terms-and-policy__item"><a href="#">Политика конфедициальности</a></li>
-        <li class="terms-and-policy__item"><a href="#">Условия и положения</a></li>
+        <li class="terms-and-policy__item"><a href="conditions.html">Политика конфедициальности</a></li>
+        <li class="terms-and-policy__item"><a href="politics.html">Условия и положения</a></li>
       </ul>
     </section>
   </footer>
